syntax = "proto3";

package cn.gdrfgdrf.connectComputer.Protobuf.Action.Account;

import "Action/Account/Enum/account_enum.proto";

option java_package = "cn.gdrfgdrf.Protobuf.Action.Account";
option java_outer_classname = "AccountProto";

message UserLoginPacket {
    string token = 1;
    Enum.LoginModeEnum login_mode = 2;
}