/*
 * Copyright (C) 2024 Contributors
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package cn.gdrfgdrf.connectComputer.Protobuf.Action.Controller;

import "Common/enum.proto";

option java_package = "cn.gdrfgdrf.Protobuf.Action.Controller";
option java_outer_classname = "ControllerProto";

message ConnectComputerPacket {
    int32 id = 1;
}

message ControllerDisconnectedPacket {
}

message KeyEventPacket {
    Common.KeyEventType key_event_type = 1;
    int32 id = 2;
    int64 when = 3;
    int32 modifiers = 4;
    int32 key_code = 5;
    string key_char = 6;
    int32 key_location = 7;
}

message TerminalClosedPacket {
}